# GolfOGL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Camera.hpp  Cube.hpp  FirstScene.hpp  Game.hpp  GameConfig.hpp  Gravity.hpp  Logger.hpp  Player.hpp  Shader.hpp  Sphere.hpp  TextureManager.hpp  Window.hpp
include/Components/: Collider.hpp  Mesh.hpp  Simplex.hpp  Texture.hpp  Texture2D.hpp  TextureCubemap.hpp  Vertex.hpp
include/Core/: Logger.hpp  Renderer.hpp  Shader.hpp  Window.hpp
include/GameElements/: CollisionState.hpp  DeadEndElement.hpp  DirectElement.hpp  GameElement.hpp  Item.hpp  TurnElement.hpp  Wall.hpp
include/Manager/: ShaderManager.hpp  TextureManager.hpp
include/Objects/: Cube.hpp  Object.hpp  Sphere.hpp
include/Physics/: Collider.hpp  Gravity.hpp  Simplex.hpp
include/Primitives/: Cube.hpp  Object.hpp  Sphere.hpp
libs/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/stb_image/: CMakeLists.txt
res/shaders/: CubeShader.fs  CubeShader.vs  SphereShader.fs  SphereShader.vs  shader.frag  shader.fs  shader.vs
src/: Camera.cpp  Cube.cpp  FirstScene.cpp  Game.cpp  Gravity.cpp  Player.cpp  Renderer.cpp  Shader.cpp  Sphere.cpp  TextureManager.cpp  Window.cpp  main.cpp
src/Components/: Collider.cpp  Mesh.cpp  Simplex.cpp  Texture.cpp  Texture2D.cpp  TextureCubemap.cpp
src/Core/: Renderer.cpp  Shader.cpp  Window.cpp
src/GameElements/: DeadEndElement.cpp  DirectElement.cpp  GameElement.cpp  Item.cpp  TurnElement.cpp  Wall.cpp
src/Manager/: ShaderManager.cpp  TextureManager.cpp
src/Objects/: Cube.cpp  Object.cpp  Sphere.cpp
src/Physics/: Collider.cpp  Gravity.cpp  Simplex.cpp
src/Primitives/: Cube.cpp  Object.cpp  Sphere.cpp
tests/: CMakeLists.txt  tests.cpp
